--- a/projectccmaster/src/main/resources/application.properties
+++ b/projectccmaster/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.username=pedro1
 spring.datasource.password=123
 
 
-gemini.api.key=AIzaSyA6EMsMWweKvpGgPc4VgRhHFhpGA36WZl8
+gemini.api.key=AIzaSyDDzuGdsmo8hz_GZfAf2GlTdtxGfRinq5o
+
+spring.jpa.hibernate.ddl-auto=update
